--- a/AER/nbproject/project.properties
+++ b/AER/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/AER.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.bcprov-ext-jdk15on-159.jar=/home/pedro/Downloads/bcprov-ext-jdk15on-159.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.bcprov-ext-jdk15on-159.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
