--- a/AER/nbproject/project.properties
+++ b/AER/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/AER.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.bcprov-ext-jdk15on-159.jar=/home/pedro/Downloads/bcprov-ext-jdk15on-159.jar
+file.reference.bcprov-ext-jdk15on-159.jar-1=/home/toms/Downloads/bcprov-ext-jdk15on-159.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bcprov-ext-jdk15on-159.jar}
+    ${file.reference.bcprov-ext-jdk15on-159.jar}:\
+    ${file.reference.bcprov-ext-jdk15on-159.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
