--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,14 @@ excludes=
 file.reference.bcprov-ext-jdk15on-159.jar=../../../Downloads/bcprov-ext-jdk15on-159.jar
 file.reference.bcprov-ext-jdk15on-159.jar-1=../../../../toms/Downloads/bcprov-ext-jdk15on-159.jar
 file.reference.bcprov-ext-jdk15on-159.jar-2=/home/pedro/NetBeansProjects/bcprov-ext-jdk15on-159.jar
+file.reference.commons-math3-3.6.1.jar=/home/pedro/NetBeansProjects/commons-math3-3.6.1/commons-math3-3.6.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.bcprov-ext-jdk15on-159.jar}:\
     ${file.reference.bcprov-ext-jdk15on-159.jar-1}:\
-    ${file.reference.bcprov-ext-jdk15on-159.jar-2}
+    ${file.reference.bcprov-ext-jdk15on-159.jar-2}:\
+    ${file.reference.commons-math3-3.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
